<resources>
    <string name="app_name">Findix</string>
    <string name="admob_app_id">ca-app-pub-5689302165765608~6822231240</string>
    <string name="welcome">Welcome</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_in">Sign In</string>

    <string name="web_client_key">983690829081-n0lfljm32e8q33bmthuo97i1s9l91rdt.apps.googleusercontent.com</string>
    <string name="action_settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    // Action
    <string name="action_map">Map</string>
    <string name="action_profile">Profile</string>
    <string name="action_list">List</string>
    <string name="action_message">Message</string>
    <string name="action_order">Order</string>

    <string name="search">Search</string>
    <string name="hint_username">User Name</string>
    <string name="hint_your_name">Your Name</string>
    <string name="hint_company">Company</string>
    <string name="base_information">Base Information</string>
    <string name="private_information">Private Information</string>
    <string name="hint_website">WebSite</string>
    <string name="hint_description">Description</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_major">Major</string>
    <string name="action_save">Save</string>
    <string name="induce_sign_up">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="collection_users">Users</string>
    <string name="button_sign_up">SignUp</string>
    <string name="user_info">User Info</string>

    // SignUp
    <string name="succeed_sign_up">Succeed to sign up.</string>
    <string name="succeed_sign_in">Succeed to sign in.</string>
    <string name="failed_sign_up">Failed to sign up.</string>
    <string name="failed_sign_in">Failed to sign in.</string>

    // Locations
    <string name="location_makindye">Makindye</string>
    <string name="location_nsambya">Nsambya</string>
    <string name="location_kabowa">Kabowa</string>
    <string name="location_kisenyi">Kisenyi</string>
    <string name="location_namirembe">Namirembe</string>
    <string name="location_mengo">Mengo</string>
    <string name="location_kabusu">Kabusu</string>
    <string name="location_lubaga">Lubaga</string>
    <string name="location_nakasero">Nakasero</string>

    <string-array name="cities">
        <item>Makindye</item>
        <item>Nsambya</item>
        <item>Kabowa</item>
        <item>Kisenyi</item>
        <item>Namirembe</item>
        <item>Mengo</item>
        <item>Kabusu</item>
        <item>Lubaga</item>
        <item>Nakasero</item>
    </string-array>

    <string name="hint_title">Title</string>
    <string name="hint_city">City</string>
    <string name="register_order_location">Register current place to order. \nRegistering your location makes it easier for workers to find you.</string>

    <string name="error_title_is_not_filled">Please fill in title.</string>
    <string name="error_description_is_not_filled">Please fill in description.</string>
    <string name="error_order_info_not_filled">Please fill in title and description.</string>

    <string name="succeed_create_order">Order created successfully.</string>

    <string name="search_order_location">Search order location.</string>
    <string name="sign_out">Sign Out</string>

    <string name="sign_out_dialog_title">Sign Out</string>
    <string name="delete_account_dialog_title">Delete this account</string>
    <string name="sign_out_dialog_message">Are you sure to Sign Out?</string>
    <string name="delete_account_dialog_message">Are you sure to delete this account?</string>
    <string name="ok">OK</string>

    <string name="forgot_password">Forgot password?</string>
    <string name="or">OR</string>
    <string name="sign_in_with_account">Sign In with Google Account</string>
    <string name="back_to_sign_in">Back to Sign In</string>
    <string name="your_orders">Your Orders</string>
    <string name="delete_this_order">Delete this order</string>
    <string name="delete_this_account">Delete this account</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete_order">Delete this order?</string>
    <string name="complete_delete_order">Order is deleted successfully.</string>
    <string name="photos">Photos</string>
</resources>
