<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
                android:id="@+id/menu_profile"
                android:icon="@drawable/ic_action_profile"
                android:title="@string/action_profile" />
        <item
                android:id="@+id/menu_message"
                android:icon="@drawable/ic_action_message"
                android:title="@string/action_message" />
        <item
                android:id="@+id/menu_list"
                android:icon="@drawable/ic_action_list"
                android:title="@string/action_list" />

    </group>

    <item android:title="TITLE!">
        <menu>
            <item
                    android:id="@+id/menu_item3"
                    android:icon="@android:drawable/ic_menu_save"
                    android:title="Save" />
            <item
                    android:id="@+id/menu_item4"
                    android:icon="@android:drawable/ic_menu_delete"
                    android:title="Delete" />
        </menu>
    </item>
</menu>