<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.login.LoginActivity">

    <data>
        <variable
                name="OnClickGoogleSignInListener"
                type="android.view.View.OnClickListener"/>
        <variable
                name="viewModel"
                type="com.kl.findix.ui.login.LoginViewModel" />
    </data>

    <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp">

        <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="16dp"
                android:tint="?android:attr/textColorPrimary"
                android:src="@color/colorAccent"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="132dp"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:hint="@string/hint_email">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password_text_input"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:hint="@string/hint_password"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password_edit_text"
                    android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_email_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/button_sign_in"
                    android:onClick="@{OnClickGoogleSignInListener}"/>

            <com.google.android.gms.common.SignInButton
                    android:id="@+id/btn_google_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                    android:id="@+id/tv_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/btn_email_sign_in"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorPrimary"
                    tools:text="Sign Up"
                    android:onClick="@{OnClickGoogleSignInListener}"/>

            <TextView
                    android:id="@+id/tv_induce_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintTop_toBottomOf="@id/btn_email_sign_in"
                    app:layout_constraintEnd_toStartOf="@+id/tv_sign_up"
                    android:text="@string/induce_sign_up"
                    tools:text="Don't have an account?"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>
