<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
                name="viewModel"
                type="com.kl.findix.presentation.profile.ProfileViewModel" />
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_bottom_sheet_background"
            android:orientation="vertical">

        <LinearLayout
                android:id="@+id/btn_sign_out"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

            <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_margin="@dimen/margin_x2"
                    android:src="@drawable/ic_action_profile" />

            <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/sign_out" />

        </LinearLayout>

        <LinearLayout
                android:id="@+id/btn_delete_account"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

            <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_margin="@dimen/margin_x2"
                    android:src="@drawable/ic_delete" />

            <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/delete_this_account" />

        </LinearLayout>

        <LinearLayout
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

            <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_margin="@dimen/margin_x2"
                    android:src="@drawable/ic_close" />

            <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/cancel" />

        </LinearLayout>
    </LinearLayout>
</layout>
